--- a/src/main/resources/templates/user/success.html
+++ b/src/main/resources/templates/user/success.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Success</title>
 </head>
 <body>
-    <p>Hello <\go authorization>!</p>
+    <h1>Success!</h1>
 </body>
 </html>
