--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
 </head>
 <body>
-
+<div style="color: red" th:if="${param.error}">
+    Bad credentials
+</div>
+<form action="/login" method="post">
+    <label for="username">Username:
+        <input id="username" type="text" name="username">
+    </label><br>
+    <label for="password">Password:
+        <input id="password" type="password" name="password">
+    </label><br>
+    <button type="submit">Login</button>
+</form>
+<form action="/users/registration">
+    <button type="submit">Registration</button>
+</form>
 </body>
 </html>
