--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -16,7 +16,7 @@
 </main>
 <footer>
     <form th:action="@{/logout}" method="post">
-        <button type="submit">Logout</button>
+        <button type="submit">logout</button>
     </form>
 </footer>
 </body>
