--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,14 +11,15 @@
 <form action="/login" method="post">
     <label for="username">Username:
         <input id="username" type="text" name="username">
-    </label><br>
+    </label>
+    <br>
+    <br>
     <label for="password">Password:
         <input id="password" type="password" name="password">
-    </label><br>
+    </label>
+    <br>
+    <br>
     <button type="submit">Login</button>
-</form>
-<form action="/users/registration">
-    <button type="submit">Registration</button>
 </form>
 </body>
 </html>
