--- a/src/main/resources/templates/admin/new_user.html
+++ b/src/main/resources/templates/admin/new_user.html
@@ -23,7 +23,7 @@
             <input type="text" th:field="*{email}" id="email" required placeholder="your email"/>
             <br/>
             <label for="bio">3: </label>
-            <input type="text" th:field="*{bio}" id="bio" required placeholder="your bio"/>
+            <input type="text" th:field="*{bio}" id="bio" placeholder="your bio"/>
             <br>
             <br>
             <div>
