--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-<div style="color: red" th:if="${param.error}">
-    Bad credentials
+<body class="container d-flex align-items-start justify-content-center min-vh-100 pt-5">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <form th:action="@{/login}" method="post">
+                <h1 class="mb-3">Please sign in</h1>
+                <div class="mb-2">
+                    <input id="username" type="text" name="username"
+                           class="form-control mb-1" placeholder="Username">
+                </div>
+                <div class="mb-3">
+                    <input id="password" type="password" name="password"
+                           class="form-control mb-1" placeholder="Password">
+                </div>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="submit">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
-<form action="/login" method="post">
-    <label for="username">Username:
-        <input id="username" type="text" name="username">
-    </label>
-    <br>
-    <br>
-    <label for="password">Password:
-        <input id="password" type="password" name="password">
-    </label>
-    <br>
-    <br>
-    <button type="submit">Login</button>
-</form>
 </body>
 </html>
