--- a/src/main/resources/templates/admin/edit_panel.html
+++ b/src/main/resources/templates/admin/edit_panel.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Edit panel</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<header>
-    <h3>Edit panel</h3>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<header class="container-fluid" style="height: 50px;">
+    <div class="row h-100 d-flex align-items-center bg-dark">
+        <div class="col-8 justify-content-lg-start">
+            <span th:text="${user.getUsername()}" class="text-white fw-bold"></span>
+            <span class="text-white"> with roles: </span>
+            <span th:each="role : ${roles}" th:text="${role.getAuthority()} + ' '" class="text-white"></span>
+        </div>
+        <div class="col-4 justify-content-lg-end">
+            <form th:action="@{/logout}" method="post" class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button type="submit" class="btn fw-bold" style="color: dimgray;">logout</button>
+            </form>
+        </div>
+    </div>
 </header>
-<main>
-    <table>
-        <thead>
-        <tr>
-            <th>name</th>
-            <th>email</th>
-            <th>role</th>
-            <th></th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}">
-            <td th:utext="${user.getUsername()}"></td>
-            <td th:utext="${user.getEmail()}"></td>
-            <td th:each="role : ${user.getRoles()}" th:text="${role.getRoleName()}"></td>
-            <td>
-                <a th:href="@{edit_panel/edit_user(id=${user.getId()})}">
-                    <button type="button">edit</button>
-                </a>
-            </td>
-            <td>
-                <form th:action="@{edit_panel/delete_user(id=${user.getId()})}" th:method="POST">
-                    <button type="submit">delete</button>
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</main>
-<footer>
-    <a th:href="@{edit_panel/new_user}">add</a><br>
-    <br>
-    <form th:action="@{/logout}" method="post">
-        <button type="submit">logout</button>
-    </form>
-</footer>
 </body>
 </html>
