--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,22 +2,89 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Profile</title>
 </head>
 <body>
-<header>
-    <p th:text="'id your account: ' + ${user.getId()}"></p>
-    <h3 th:text="'Hello, ' + ${user.getUsername()} + '!'"></h3>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<header class="container-fluid" style="height: 50px;">
+    <div class="row h-100 d-flex align-items-center bg-dark">
+        <div class="col-8 justify-content-lg-start">
+            <span th:text="${user.getUsername()}" class="text-white fw-bold"></span>
+            <span class="text-white"> with roles: </span>
+            <span th:each="role : ${roles}" th:text="${role.getRoleName()} + ' '" class="text-white"></span>
+        </div>
+        <div class="col-4 justify-content-lg-end">
+            <form th:action="@{/logout}" method="post" class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button type="submit" class="btn fw-bold" style="color: dimgray;">logout</button>
+            </form>
+        </div>
+    </div>
 </header>
-<main>
-    <p th:text="'email: ' + ${user.getEmail()}"></p>
-    <p th:text="'bio: ' + ${user.getBio()}"></p>
-    <p th:each="role : ${user.getRoles()}" th:text="'role: ' + ${role.getRoleName()}"></p>
+
+<main class="container-fluid">
+    <div class="row" style="height: 100vh;">
+        <nav class="col-2 d-lg-block sidebar" style="padding-top: 15px; height: 100vh; overflow-y: auto;">
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item v-100">
+                    <a class="nav-link" aria-current="page" href="/admin/edit_panel">
+                        <div class="text-left">Admin</div>
+                    </a>
+                    <a class="nav-link active" aria-current="page" href="/user/profile">
+                        <div class="text-left">User</div>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="col-10" style="padding-top: 15px; background-color: #F4F4F4;">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                <h2 class="h2">User Information Page</h2>
+            </div>
+
+            <div class="tab-content" id="nav-tabContent" style="padding-top: 15px;">
+                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="users_info"
+                     tabindex="0">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 style="font-size: 20px">About User</h2>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-sm" th:object="${user}">
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Email</th>
+                                        <th>Username</th>
+                                        <th>Bio</th>
+                                        <th>Roles</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td th:text="*{id}"></td>
+                                        <td th:text="*{email}"></td>
+                                        <td th:text="*{username}"></td>
+                                        <td th:text="*{bio}"></td>
+                                        <td th:each="role : ${user.getRoles()}" th:text="${role.getRoleName()}"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
-<footer>
-    <form th:action="@{/logout}" method="post">
-        <button type="submit">logout</button>
-    </form>
-</footer>
 </body>
 </html>
